--- a/src/main/webapp/WEB-INF/jdbc.properties
+++ b/src/main/webapp/WEB-INF/jdbc.properties
@@ -1,4 +1,4 @@
-driver = org.postgresql.Driver
-url = jdbc:postgresql://127.0.0.1:5432/test_pd
-username = postgres
-password = postgres
+driver = com.mysql.jdbc.Driver
+url = jdbc:mysql://localhost:3306/test_bd
+username = root
+password = 12345
