--- a/src/main/webapp/WEB-INF/jdbc.properties
+++ b/src/main/webapp/WEB-INF/jdbc.properties
@@ -1,4 +1,4 @@
 driver = com.mysql.jdbc.Driver
-url = jdbc:mysql://localhost:3306/test_bd
+url = jdbc:mysql://localhost:3306/bd_fondos
 username = root
 password = 12345
